--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "prop-types": "15.6.0",
     "react": "16.2.0",
     "react-dom": "16.2.0",
+    "react-google-maps": "^9.4.5",
     "react-intl": "2.4.0",
     "react-overlays": "0.8.3",
     "react-router-dom": "4.2.2",
